recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

	var branche=0

	if (branche==2){
		branche = 0
	}
	
	if(steps!=0){
		brache = branche+1
		if (branche==0){
			current(steps)
			avance(length)
			droite(angle)
			tree(steps-1,shrink*length,angle,shrink)
		}
		else{
			current(steps)
			avance(length)
			gauche(angle)
			tree(steps-1,shrink*length,angle,shrink)
		}
	}
	if (steps==0){
		tree(steps+1,shrink*length,angle,shrink)
	}

}
